:bug: Fix missing space on page top.

--- a/frontend/scss/components/templates/_default.scss
+++ b/frontend/scss/components/templates/_default.scss
@@ -1,3 +1,7 @@
+.#{utility('main')} > .#{utility('container')}:first-child {
+  padding-top: 26px;
+}
+
 @mixin container {
   position: relative;
   display: flex;
